--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Account Authorizer Transaction is responsible for doing stream from file and persiste",
   "main": "main.js",
   "scripts": {
-    "test": "npm run test",
+    "test": "mocha",
     "tsc": "tsc"
   },
   "repository": {
@@ -24,7 +24,12 @@
   },
   "homepage": "https://github.com/mirlabraga/account-authorizer-transaction#readme",
   "dependencies": {
-    "@types/node": "^14.14.9",
     "typescript": "^4.1.2"
+  },
+  "devDependencies": {
+    "@types/mocha": "^8.0.4",
+    "@types/node": "^14.14.10",
+    "mocha": "^8.2.1",
+    "ts-mocha": "^8.0.0"
   }
 }
