--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.10",
+    "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "ts-mocha": "^8.0.0"
   }
